--- a/css/styles.css
+++ b/css/styles.css
@@ -12,25 +12,25 @@ body {
 
 /* Contenedor principal */
 main {
-    flex: 1; /* Ocupa el espacio restante después del sidebar */
-    background-color: #fff; /* Fondo blanco para el contenido */
-    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1); /* Sombra interna */
+    flex: 1;
+    background-color: #fff; 
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    overflow: hidden; /* Evita scroll en el contenido principal */
-    transition: margin-left 0.3s ease; /* Transición suave al cambiar el margen */
+    overflow: hidden; 
+    transition: margin-left 0.3s ease;
 }
 
 main h2 {
     font-family: 'Courier New', Courier, monospace;
     font-size: 2rem;
     color: #333;
-    margin: 20px; /* Espaciado alrededor del título */
+    margin: 20px;
 }
 
 main p {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Arial', sans-serif;
     font-size: 1.2rem;
     color: #666;
-    margin: 20px; /* Espaciado alrededor del párrafo */
+    margin: 20px; 
 }
